<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.SignUpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/ed_mail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/back_edit"
        android:drawableStart="@drawable/ic_acc"
        android:ems="10"
        android:hint="@string/ed_mail"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/ed_pas"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_edit"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:ems="10"
        android:hint="@string/ed_pas"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintStart_toStartOf="@+id/ed_mail"
        app:layout_constraintTop_toBottomOf="@+id/ed_mail" />

    <EditText
        android:id="@+id/ed_username"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_edit"
        android:ems="10"
        android:hint="@string/ed_username"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/ed_mail"
        app:layout_constraintStart_toStartOf="@+id/ed_pas"
        app:layout_constraintTop_toBottomOf="@+id/ed_pas" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_edit"
        android:ems="10"
        android:hint="@string/ed_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/ed_username"
        app:layout_constraintStart_toStartOf="@+id/ed_username"
        app:layout_constraintTop_toBottomOf="@+id/ed_username" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="onClickSignUpIn"
        android:text="@string/sign_in_t"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/back_button"
        android:onClick="onClickSignUp"
        android:text="@string/sign_up_b"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/ed_name"
        app:layout_constraintStart_toStartOf="@+id/ed_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_name"
        tools:ignore="OnClick" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/ed_pas"
        app:layout_constraintEnd_toEndOf="@+id/ed_mail"
        app:layout_constraintTop_toTopOf="@+id/ed_pas" />
</androidx.constraintlayout.widget.ConstraintLayout>