<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_edit"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Редактировать профиль"
            android:textColor="@color/black"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:onClick="OnCickSaveInf"
            app:srcCompat="@drawable/ic_check"
            tools:layout_editor_absoluteX="179dp"
            tools:layout_editor_absoluteY="8dp"
            android:layout_marginStart="100dp"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="OnClickImageChange"
        android:text="@string/edit_img"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_edit" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/ed_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ed_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_username"
        app:layout_constraintStart_toStartOf="@+id/edit_username"
        app:layout_constraintTop_toBottomOf="@+id/edit_username" />

    <EditText
        android:id="@+id/ed_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ed_bio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_name"
        app:layout_constraintStart_toStartOf="@+id/edit_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:gravity="center"
        android:onClick="OnClickChangeAcc"
        android:text="@string/change"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_bio" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="16dp"
        android:background="@color/dark_white_d"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_white_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>