<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.SignInActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/ed_mail_in"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/back_edit"
        android:drawableStart="@drawable/ic_acc"
        android:ems="10"
        android:hint="@string/ed_mail"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/ed_pas_in"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/back_edit"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:ems="10"
        android:hint="@string/ed_pas"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="@+id/ed_mail_in"
        app:layout_constraintTop_toBottomOf="@+id/ed_mail_in" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/back_button"
        android:onClick="onClickSignIn"
        android:text="@string/sign_in_b"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/ed_mail_in"
        app:layout_constraintStart_toStartOf="@+id/ed_pas_in"
        app:layout_constraintTop_toBottomOf="@+id/ed_pas_in"
        tools:ignore="OnClick" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/ed_pas_in"
        app:layout_constraintEnd_toEndOf="@+id/ed_mail_in"
        app:layout_constraintTop_toTopOf="@+id/ed_pas_in" />

</androidx.constraintlayout.widget.ConstraintLayout>